overflow fix

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -9,6 +9,7 @@ body {
   height: 100%;
   background: $primary-color;
   background-repeat: no-repeat;
+  overflow: hidden;
 }
 main {
   height: 100vh;
